Adding User View

--- a/app/src/main/res/layout/activity_user_match.xml
+++ b/app/src/main/res/layout/activity_user_match.xml
@@ -71,11 +71,11 @@
             android:gravity="center"
             android:textColor="@android:color/black"
             android:textSize="90sp"/>
-    <ListView
-            android:id="@+id/statMatch"
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/statsMatch"
+            android:padding="10dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </ListView>
+            android:layout_height="match_parent"
+            tools:listitem="@layout/custom_recview"/>
 
 </LinearLayout>
