--- a/app/src/main/res/layout/custom_recview.xml
+++ b/app/src/main/res/layout/custom_recview.xml
@@ -2,16 +2,16 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     <TextView
-            android:id="@+id/namePlayer"
+            android:id="@+id/namePlayerA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="C. Ronaldo"
             />
     <TextView
-            android:id="@+id/timeEvent"
+            android:id="@+id/timeEventA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20'"
@@ -21,7 +21,21 @@
             android:id="@+id/iconEvent"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_launcher_background"
+            android:src="@drawable/yellow_card"
             android:layout_centerHorizontal="true"/>
+    <TextView
+            android:id="@+id/namePlayerB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="C. Ronaldo"
+    />
+    <TextView
+            android:id="@+id/timeEventB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="20'"
+            android:layout_toRightOf="@+id/iconEvent"
+            android:layout_marginLeft="10sp"/>
 
 </RelativeLayout>
