--- a/app/src/main/res/layout/activity_user_match.xml
+++ b/app/src/main/res/layout/activity_user_match.xml
@@ -76,6 +76,6 @@
             android:padding="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/custom_recview"/>
+            tools:listitem="@layout/custom_recview_user"/>
 
 </LinearLayout>
