--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,15 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-            android:angle="45"
-            android:startColor="#CC00CC"
-            android:endColor="#CC55CC"/>
-
-    <corners android:radius="45dp"/>
-    <padding android:top="15dp"
-             android:bottom="15dp"
-             android:right="15dp"
-             android:left="15dp"/>
-
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+    <solid android:color="#00ffffff"/>
+    <stroke android:color="@color/colorPrimary" android:width="3dp"/>
+    <corners android:radius="5dp"/>
 </shape>
