--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#DBEBFF</color>
     <color name="colorPrimaryDark">#1E90FF</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#1E60DD</color>
 </resources>
